--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -63,6 +63,16 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
+    - name: add smartdns source
+      run: |
+        echo "====1===="
+        ls /workdir
+        echo "====2===="
+        ls /workdir/openwrt
+        echo "====3===="
+        ls /workdir/openwrt
+        git clone -b lede https://github.com/pymumu/luci-app-smartdns.git /workdir/openwrt/package/lean/luci-app-smartdns
+
     - name: Load custom feeds
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
